--- a/VehicleParkingDjango/VehicleParking/vehicle/templates/add_category.html
+++ b/VehicleParkingDjango/VehicleParking/vehicle/templates/add_category.html
@@ -8,14 +8,20 @@
     <br> &nbsp;&nbsp;Welcome <b style="text-transform: capitalize; color: black">{{ request.user.username }}</b>
 
     <div class="container" style="margin-top: 50px">
-        <h2 class="text-center" style="font-family: Times New Roman; color: black"><strong><u>Add New Vehicle
-                    Category</u></strong></h2>
+        <h2 class="text-center" style="font-family: Times New Roman; color: black">
+            <strong><u>Add New Vehicle Category</u></strong>
+        </h2>
 
         <div class="form-group">
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
+                
                 <label><b>Vehicle Category Name</b></label>
                 <input type="text" name="categoryname" placeholder="Vehicle Category Name" class="form-control" required>
+                
+                <label class="mt-3"><b>Number of Slots</b></label>
+                <input type="number" name="slotcount" placeholder="Enter Number of Slots" class="form-control" min="0" required>
+                
                 <br>
                 <input type="submit" name="submit" value="Submit" class="btn btn-primary form-control">
             </form>
@@ -28,9 +34,9 @@
         window.location = '{% url 'manage_category' %}';
     </script>
     {% endif %}
-    {% if error == "yes" %}
+    {% if error %}
     <script>
-        alert('Something Went Wrong. Please try again');
+        alert('Error: {{ error|escapejs }}');
     </script>
     {% endif %}
 </body>
