--- a/VehicleParkingDjango/VehicleParking/vehicle/templates/add_vehicle.html
+++ b/VehicleParkingDjango/VehicleParking/vehicle/templates/add_vehicle.html
@@ -31,7 +31,7 @@
                 <label><b>Parking Date</b></label>
                 <input type="date" name="pdate" class="form-control" required="">
                 <label><b>In Time</b></label>
-                <input type="time" name="intime" placeholder="In Time" class="form-control" required="">
+                <input type="time" name="intime" class="form-control" required>
                 <br>
                 <input type="submit" name="submit" value="Submit" class="btn btn-primary form-control">
             </form>
@@ -46,8 +46,8 @@
     window.location = '{% url 'manage_incomingvehicle' %}';
 </script>
 {% endif %}
-{% if error == "yes" %}
+{% if error %}
 <script>
-    alert('Something Went Wrong. Please try again');
+    alert('Error: {{ error|escapejs }}');
 </script>
 {% endif %}
