--- a/VehicleParkingDjango/VehicleParking/vehicle/templates/edit_category.html
+++ b/VehicleParkingDjango/VehicleParking/vehicle/templates/edit_category.html
@@ -14,9 +14,13 @@
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <label for="categoryname"><b>Vehicle Category Name</b></label>
-                <input type="text" name="categoryname" class="form-control" value="{{ category.categoryname }}">
+                <input type="text" name="categoryname" class="form-control" value="{{ category.categoryname }}" required>
+
+                <label for="slotcount" class="mt-3"><b>Number of Slots</b></label>
+                <input type="number" name="slotcount" class="form-control" value="{{ category.slot_count }}" min="0" required>
+
                 <br>
-                <input type="submit" name="submit" value="Submit" class="btn btn-primary form-control">
+                <input type="submit" name="submit" value="Update" class="btn btn-primary form-control">
             </form>
         </div>
     </div>
@@ -29,8 +33,8 @@
     window.location = '{% url 'manage_category' %}';
 </script>
 {% endif %}
-{% if error == "yes" %}
+{% if error %}
 <script>
-    alert('Something Went Wrong. Please try again');
+    alert('Error: {{ error|escapejs }}');
 </script>
 {% endif %}
