--- a/VehicleParkingDjango/VehicleParking/vehicle/templates/view_incomingdetail.html
+++ b/VehicleParkingDjango/VehicleParking/vehicle/templates/view_incomingdetail.html
@@ -92,13 +92,13 @@ $(document).ready(function() {
           <tr>
     <th>Parking Charge :</th>
     <td>
-    <input type = "text" name="parkingcharge"  class="form-control wd-450" required="true"></td>
+     <input type="text" name="parkingcharge" class="form-control wd-450" value="(Auto-calculated)" readonly>
   </tr>
 
              <tr>
     <th>Out Time :</th>
     <td>
-    <input type = "time" name="outtime"  class="form-control wd-450" required="true"></td>
+      <input type="datetime-local" name="outtime" class="form-control" required>
   </tr>
 
 
@@ -108,22 +108,25 @@ $(document).ready(function() {
                                         </form>
 
 
-</table>
-
-
-
-
-</div>
+            {% if vehicle.parkingcharge %}
+            <tr>
+                <th>Parking Charge</th>
+                <td><strong>{{ vehicle.parkingcharge }}</strong></td>
+            </tr>
+            {% endif %}
+        </table>
+    </div>
 </body>
 </html>
 
-{% if error "no" %}
+
+{% if error == "no" %}
 <script>
     alert('Vehicle Parking Detail has been updated');
     window.location=('{% url 'manage_outgoingvehicle' %}');
 </script>
 {% endif %}
-{% if error "yes" %}
+{% if error == "yes" %}
 <script>
     alert('Something Went Wrong. Please try again');
 </script>
